hiding the select to avoid sudden changes on the page and making sure we do not cause any vertical jump

--- a/chosen/chosen.css
+++ b/chosen/chosen.css
@@ -1,4 +1,9 @@
 /* @group Base */
+select.chzn-select {
+  visibility: hidden;
+  height: 28px !important;
+  min-height: 28px !important;
+}
 .chzn-container {
   font-size: 13px;
   position: relative;
